--- a/styles.css
+++ b/styles.css
@@ -20,6 +20,19 @@ body {
     background-color: #3585fd;
 }
 
+.del-but {
+    color: #aaaaaa;
+    border: 1px solid #dddddd;
+    font-size: 9px;
+    height: 20px;
+}
+
+.del-but:hover {
+    color: white;
+    background-color: #aaaaaa;
+}
+
+
 #add-item-div {
     display: none;
 }
