Added description and minimum quantity fields to Item

--- a/styles.css
+++ b/styles.css
@@ -62,6 +62,7 @@ body {
 .add-item-data, .change-item-data {
     column-width: 200px;
     padding: 5px 0px;
+    vertical-align: top;
 }
 
 #add-item-submit, #change-item-submit {
