--- a/styles.css
+++ b/styles.css
@@ -27,15 +27,27 @@ body::-webkit-scrollbar-thumb {
     background: #6649b8;
 }
 
-.navbar {
-    width: 5rem;
-    height: 100vh;
+@keyframes appearLast {
+    0% { 
+        position: absolute;
+        left: -999px;
+    }
+    99% { 
+        position: absolute;
+        left: -999px;
+    }
+    100% {
+        position: static;
+    }
+}
+
+.stock-navbar {
     position: fixed;
     background-color: var(--bg-primary);
     transition: width 200ms ease;
 }
 
-.navbar-nav{
+.stock-navbar-nav{
     list-style: none;
     padding: 0;
     margin: 0;
@@ -44,62 +56,66 @@ body::-webkit-scrollbar-thumb {
     align-items: center;
 }
 
-.nav-item {
+.stock-nav-item {
     width: 100%;
 }
 
-.nav-item:hover {
+.stock-nav-item:hover {
     background-color: var(--bg-secondary);
 }
 
-.nav-item:hover svg {
+.stock-nav-item:hover svg {
     fill: var(--text-secondary);
 }
 
-.navbar:hover .logo-text{
-    display: block;
+.stock-navbar:hover .stock-logo-text{
+    display: inline;
 }
 
-.nav-item:hover .link-text{
+.stock-nav-item:hover .stock-link-text{
     color: var(--text-secondary);
 }
 
-.nav-link {
+.stock-nav-link {
     display: flex;
     align-items: center;
-    height: 5rem;
+    height: 3rem;
     color: var(--text-primary);
     text-decoration: none;
 }
 
-.nav-link svg {
-    min-width: 2rem;
-    margin: 0 1.5rem;
+.stock-nav-link svg {
+    min-width: 0.5rem;
+    margin: 0 0.75rem;
     fill: var(--text-primary); 
 }
 
-.link-text {
+.stock-link-text {
     display: none;
     margin-left: 1rem;
+    animation-name: appearLast;
+    animation-duration: 150ms;
 }
 
-.logo {
+.stock-logo {
     font-weight: bold;
     margin-bottom: 1rem;
     text-align: center;
     color: var(--text-secondary);
     background-color: var(--bg-secondary);
-    font-size: 1.5rem;
+    font-size: 1rem;
     width: 100%;
 }
 
-.logo-text{
-    display: none;
+.stock-logo:hover .stock-logo-text{
+    color: var(--text-primary);
 }
 
-.logo svg {
-    transform: rotate(0deg);
-    transition: transform var(--transition-speed);
+.stock-logo-text{
+    display: none;
+    margin-left: 1rem;
+    animation-name: appearLast;
+    animation-duration: 150ms;
 }
 
 #container-div {
@@ -107,69 +123,69 @@ body::-webkit-scrollbar-thumb {
 }
 
 @media only screen and (min-width: 600px){
-    .navbar{
+    .stock-navbar{
         top: 0;
-        width: 5rem;
+        width: 3rem;
         height: 100vh;
     }
 
-    .navbar:hover {
-        width: 16rem;
+    .stock-navbar:hover {
+        width: 10rem;
     }
 
-    .navbar:hover .link-text{
+    .stock-navbar:hover .stock-link-text{
         display: inline;
+        animation-play-state: 'running';
+    }
+
+    .stock-navbar:hover .stock-logo-text{
+        display: inline;
+        animation-play-state: 'running';
+    }
+
+    .stock-navbar:hover .navbar-nav svg{
+        min-width: 1rem;
     }
 
     #container-div {
-        margin-left: 5rem;
+        margin-left: 3rem;
+    }
+
+    .stock-input {
+        width: 300px;
     }
 }
 
 @media only screen and (max-width: 600px) {
-    .navbar {
+    .stock-navbar {
         bottom: 0;
-        height: 5rem;
+        height: 3rem;
         width: 100vw;
     }
 
-    .logo {
+    .stock-logo {
         display: none;
     }
 
-    .navbar-nav {
+    .stock-navbar-nav {
         flex-direction: row;
     }
 
-    .nav-link {
+    .stock-nav-link {
         justify-content: center;
     }
 
     #container-div {
-        margin-bottom: 5rem;
+        margin-bottom: 3rem;
+    }
+
+    .stock-input {
+        width: 180px;
     }
 }
 
-.navigation-buttons {
-    display: flex;
-}
-
-.nav-but {
-    margin: 5px;
-    background-color: white;
-    border: 1px solid #3585fd;
-    border-radius: 3px;
-    padding: 3px 5px;
-    color: #3585fd;
-}
-
-.nav-but:hover {
-    color: white;
-    background-color: #3585fd;
-}
-
-.nav-but:focus-visible {
-    outline: 1px solid #3585fd;
+.stock-form-title{
+    font-size: 2rem;
 }
 
 .stock-item-row {
@@ -216,20 +232,7 @@ body::-webkit-scrollbar-thumb {
 #add-item-submit, #change-item-submit {
     display: flex;
     justify-content: right;
-}
-
-#add-item-submit-input, #change-item-submit-input{
-    margin: 5px;
-    background-color: white;
-    border: 1px solid #3585fd;
-    border-radius: 3px;
-    padding: 3px 5px;
-    color: #3585fd;
-}
-
-#add-item-submit-input:hover , #change-item-submit-input:hover {
-    color: white;
-    background-color: #3585fd;
+    gap: 10px;
 }
 
 #alerting-element-add, #alerting-element-change {
