--- a/styles.css
+++ b/styles.css
@@ -20,11 +20,11 @@ body::-webkit-scrollbar {
 }
 
 body::-webkit-scrollbar-track {
-    background: #1e1e24;
+    background: var(--bg-primary);
 }
 
 body::-webkit-scrollbar-thumb {
-    background: #6649b8;
+    background: var(--text-primary);
 }
 
 @keyframes appearLast {
@@ -204,6 +204,13 @@ body::-webkit-scrollbar-thumb {
     color: white;
     background-color: #aaaaaa;
 }  
+
+#export-but {
+    height: 30px;
+    width: 70px;
+    font-size: 10pt;
+    padding: 0;
+}
 
 #add-item-div {
     display: none;
