--- a/styles.css
+++ b/styles.css
@@ -183,15 +183,38 @@ body::-webkit-scrollbar-thumb {
     }
 }
 
-@media only screen and (max-width: 420px) {
-    
-    
+@media only screen and (max-width: 420px) { 
     #filter-form {
-        flex-direction: column;
-        gap: 5px;
+        display: grid;
+        grid-template-areas: 
+        'a b'
+        'c d';
+        row-gap: 5px;
     }
+
+    #filter-form > div:nth-child(1) {
+        grid-area: a;
+    }
+
+    #filter-form > div:nth-child(2) {
+        grid-area: b;
+    }
+
+    #filter-form > div:nth-child(3) {
+        grid-area: 2 / c / last-line / d;
+        align-self: center;
+    }
+
     #filter-nav label {
         font-size: 10pt;
+    }
+}
+
+@media only screen and (max-width: 300px) { 
+    form, table, nav {
+        width: auto;
+        margin-inline: auto;
+        overflow: hidden;
     }
 }
 
@@ -419,7 +442,7 @@ table {
 
 @media only screen and (max-width: 700px) {
     .quantity-span {
-        width: auto;
+        width: 25px;
     }
 }
 
